--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -57,12 +57,12 @@ jobs:
           extensions: mbstring, intl
 
       - name: Configure composer authentication
-        if: ${{ env.COMPOSER_AUTH_COMMAND }}
-        run: composer config --auth ${{ env.COMPOSER_AUTH_COMMAND }}
+        if: ${{ env.COMPOSER_AUTH_COMMAND }} && ${{ env.COMPOSER_AUTH }}
+        run: composer config ${{ env.COMPOSER_AUTH_COMMAND }}
         
       - name: Save auth.json
         id: auth_json
-        if: ${{ env.COMPOSER_AUTH_COMMAND }}
+        if: ${{ env.COMPOSER_AUTH_COMMAND }} && ${{ env.COMPOSER_AUTH }}
         run: echo "output=auth.json" >> $GITHUB_OUTPUT
 
       - name: Get composer cache directory
