--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -26,6 +26,8 @@ jobs:
 
       - name: Checkout repository
         uses: actions/checkout@v3
+        with:
+          ssh-private-key: ${{ secrets.REPO_DEPLOY_KEY }}
 
       - name: Get PHP version from composer.json
         id: php_version
