--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -21,13 +21,16 @@ jobs:
       COMPOSER_GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
     runs-on: ubuntu-latest
     steps:
+      - name: start ssh agent with deployment key
+        uses: webfactory/ssh-agent@v0.8.0
+        with:
+          ssh-private-key: ${{ secrets.REPO_DEPLOY_KEY }}
+
       - name: Install jq
         run: pip install jq
 
       - name: Checkout repository
         uses: actions/checkout@v3
-        with:
-          ssh-private-key: ${{ secrets.REPO_DEPLOY_KEY }}
 
       - name: Get PHP version from composer.json
         id: php_version
