--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -40,9 +40,8 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
-          #password: ${{ secrets.GITHUB_TOKEN }}
-          password: ${{ secrets.READ_AND_DELETE_PACKAGES_TOKEN }}
-
+          password: ${{ secrets.GITHUB_TOKEN }}
+          
       - name: Checkout repository
         uses: actions/checkout@v3
         if: ${{ inputs.artifact == '' }}
