--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -39,8 +39,8 @@ jobs:
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
-          username: ${{ secrets.REGISTRY_USER }}
-          password: ${{ secrets.REGISTRY_PASSWORD }}
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
           
       - name: Checkout repository
         uses: actions/checkout@v3
